name:           n2o
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/xafizoff/n2o.hs#readme>
homepage:       https://github.com/xafizoff/n2o.hs#readme
bug-reports:    https://github.com/xafizoff/n2o.hs/issues
author:         Marat Khafizov
maintainer:     xafizoff@gmail.com
copyright:      All rights reserved (c)
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/xafizoff/n2o.hs

library
  exposed-modules:
                  Network.N2O
                , Network.N2O.Nitro
                , Network.N2O.Generic
  other-modules:
      Paths_n2o
  hs-source-dirs:
      src
  build-depends: base >=4.7 && < 5
               , wai >= 3.2 && < 4
               , wai-websockets
               , websockets
               , http-types
               , warp
               , wai-middleware-static
               , text
               , bytestring
               , safe
               , binary
               , bert
               , containers
               , stm
               , mtl
               , base64-bytestring
               , safe-exceptions
               , fmt
  default-language: Haskell2010

executable n2o-sample
  main-is: Server.hs
  other-modules:
      Paths_n2o
  hs-source-dirs:
      sample
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
                base >=4.7 && < 5
              , n2o
              , binary
              , text
              , fmt
  default-language: Haskell2010

test-suite n2o-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_n2o
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
                base >=4.7 && < 5
              , n2o
  default-language: Haskell2010
