name:           n2o
version:        0.11.2
homepage:       https://github.com/xafizoff/n2o#readme
bug-reports:    https://github.com/xafizoff/n2o/issues
author:         Marat Khafizov
maintainer:     xafizoff@gmail.com
copyright:      2018 Marat Khafizov (c)
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:  README.md
category:       Network, N2O, Web
synopsis:       Abstract Protocol Loop
description:    N2O defines a way we scale protocols, database schema, applications
                and services across companies, formatters, views and presentation layers.
                At the core N2O folds a list of protocols and their handlers providing
                a minimal type-level specification for general purpose application protocol tract.

source-repository head
  type: git
  location: https://github.com/xafizoff/n2o

library
  exposed-modules:
                  Network.N2O
                , Network.N2O.Internal
                , Data.BERT
                , Network.N2O.Web
                , Network.N2O.Web.Http
                , Network.N2O.Web.WebSockets
  other-modules:
      Paths_n2o
  hs-source-dirs:
      src
  build-depends: base >= 4.7 && < 5
               , text >= 1.2 && < 1.3
               , bytestring >= 0.9 && < 1
               , containers >= 0.5 && < 0.6
               , transformers >= 0.5 && < 0.6
               , time >= 1.8 && < 1.9
               , cereal >= 0.5 && < 0.6
               , n2o-nitro == 0.11.2
               , websockets >= 0.12.5 && < 0.13
               , network >= 2.6 && < 2.7
               , text >= 1.2 && < 1.3
               , store >= 0.5 && < 0.6
               , attoparsec >= 0.13.2 && < 0.14
               , case-insensitive >= 1.2 && < 1.3
               , base64-bytestring >= 1.0 && < 1.1
               , async >= 2.2 && < 2.3
               , stm
  default-language: Haskell2010
