name:           n2o
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/xafizoff/n2o.hs#readme>
homepage:       https://github.com/xafizoff/n2o.hs#readme
bug-reports:    https://github.com/xafizoff/n2o.hs/issues
author:         Marat Khafizov
maintainer:     xafizoff@gmail.com
copyright:      All rights reserved (c)
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:  README.md

source-repository head
  type: git
  location: https://github.com/xafizoff/n2o.hs

library
  exposed-modules:
                  Network.N2O
                , Network.N2O.Types
                , Network.N2O.Internal
                , Network.N2O.Util
                , Network.N2O.Protocols
  other-modules:
      Paths_n2o
  hs-source-dirs:
      src
  build-depends: base >= 4.7 && < 5
               , text
               , bytestring
               , binary
               , bert
               , stm
               , containers
  default-language: Haskell2010

test-suite n2o-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_n2o
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
                base >=4.7 && < 5
              , n2o
              , bert
              , hspec
  default-language: Haskell2010
