name:           n2o
version:        0.11.0
description:    Embeddable Application Protocol Loop
homepage:       https://github.com/xafizoff/n2o#readme
bug-reports:    https://github.com/xafizoff/n2o/issues
author:         Marat Khafizov
maintainer:     xafizoff@gmail.com
copyright:      2018 Marat Khafizov (c)
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:  README.md
category:       Network, N2O, Web
synopsis:       Abstract Protocol Loop

source-repository head
  type: git
  location: https://github.com/xafizoff/n2o

library
  exposed-modules:
                  Network.N2O
                , Network.N2O.Types
                , Network.N2O.Core
  other-modules:
      Paths_n2o
  hs-source-dirs:
      src
  build-depends: base >= 4.7 && < 5
               , text >= 1.2
               , bytestring >=0.9
               , binary >=0.5
               , containers >= 0.5
  default-language: Haskell2010

test-suite n2o-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_n2o
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
                base >=4.7 && < 5
              , n2o
              , hspec
  default-language: Haskell2010
