name:           n2o-nitro
version:        0.11.1
description:    Nitro DSL
homepage:       https://github.com/xafizoff/n2o#readme
bug-reports:    https://github.com/xafizoff/n2o/issues
author:         Marat Khafizov
maintainer:     xafizoff@gmail.com
copyright:      (c) Marat Khafizov, 2018
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:  README.md
category:       Network, N2O, Web
synopsis:       Nitro Elements, Events and Actions

source-repository head
  type: git
  location: https://github.com/xafizoff/n2o

library
  exposed-modules:
                  Network.N2O.Nitro
  other-modules:
      Paths_n2o_nitro
  hs-source-dirs:
      src
  build-depends: base >= 4.7 && < 5
               , n2o == 0.11.0
               , text >= 1.2
               , bytestring >= 0.10
               , binary >= 0.5
               , bert >= 1.2
               , containers >= 0.5
               , base64-bytestring >= 1.0
  default-language: Haskell2010

