name:           n2o-nitro
version:        0.11.2
homepage:       https://github.com/xafizoff/n2o#readme
bug-reports:    https://github.com/xafizoff/n2o/issues
author:         Marat Khafizov
maintainer:     xafizoff@gmail.com
copyright:      (c) Marat Khafizov, 2018
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:  README.md
category:       Network, N2O, Web
synopsis:       Nitro Elements, Events and Actions
description:    N2O Nitro elements represent HTML and JavaScript
                rendreing from Haskell tuples.

source-repository head
  type: git
  location: https://github.com/xafizoff/n2o

library
  exposed-modules:
                  Web.Nitro
                , Web.Nitro.Types
                , Web.Nitro.Elements
                , Web.Nitro.Render
                , Web.Nitro.Tags
                , Web.Nitro.Internal
                , Web.Nitro.Encode
  include-dirs: include
  other-modules:
      Paths_n2o_nitro
  hs-source-dirs:
      src
  build-depends: base >= 4.7 && < 5
               , text >= 1.2 && < 1.3
               , bytestring >= 0.10 && < 0.11
               , cereal >= 0.5 && < 0.6
               , containers >= 0.5 && < 0.6
               , clientsession >= 0.9 && < 0.10
  default-language: Haskell2010

