name:           nitro
version:        0.11
description:    Nitro Render for Elements, Events and Actions
homepage:       https://github.com/xafizoff/n2o#readme
bug-reports:    https://github.com/xafizoff/n2o/issues
author:         Marat Khafizov
maintainer:     xafizoff@gmail.com
copyright:      All rights reserved (c)
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:  README.md
synopsis: Nitro Elements, Events and Actions

source-repository head
  type: git
  location: https://github.com/xafizoff/n2o

library
  exposed-modules:
                  Network.N2O.Nitro
  other-modules:
      Paths_nitro
  hs-source-dirs:
      src
  build-depends: base >= 4.7 && < 5
               , n2o
               , text
               , bytestring
               , binary
               , bert
               , fmt
               , containers
               , base64-bytestring
  default-language: Haskell2010

