name:           n2o-protocols
version:        0.11.2
homepage:       https://github.com/xafizoff/n2o#readme
bug-reports:    https://github.com/xafizoff/n2o/issues
author:         Marat Khafizov
maintainer:     xafizoff@gmail.com
copyright:      2018 Marat Khafizov (c)
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:  README.md
category:       Network, N2O, Web
synopsis:       N2O Protocols
description:    This package contains basic type and protocol definitions
                for Nitro, Client and N2O protocols.

source-repository head
  type: git
  location: https://github.com/xafizoff/n2o

library
  exposed-modules: Network.N2O.Protocols
                 , Network.N2O.Protocols.Types
                 , Network.N2O.Protocols.Nitro
                 , Network.N2O.Protocols.Client
                 , Data.BERT
  other-modules:
      Paths_n2o_protocols
  hs-source-dirs:
      src
  build-depends: base >= 4.7 && < 5
               , n2o == 0.11.*
               , n2o-nitro == 0.11.*
               , bytestring >= 0.10
               , binary >= 0.5
               , containers >= 0.5
               , base64-bytestring >= 1.0
               , time >= 1.1
  default-language: Haskell2010
