name:           n2o-samples
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/xafizoff/n2o-hs#readme>
homepage:       https://github.com/xafizoff/n2o-hs#readme
bug-reports:    https://github.com/xafizoff/n2o-hs/issues
author:         Marat Khafizov
maintainer:     xafizoff@gmail.com
copyright:      All rights reserved (c)
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:  README.md

source-repository head
  type: git
  location: https://github.com/xafizoff/n2o-hs

executable n2o-sample-server
  main-is: Main.hs
  other-modules:
      Paths_n2o_samples
  hs-source-dirs:
      src
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
                base >=4.7 && < 5
              , n2o
              , n2o-web
              , bert
              , binary
              , bytestring
              , text
              , websockets
  default-language: Haskell2010
