name:           n2o-web
version:        0.11.0
description:    Poor man's WebSocket and HTTP static servers.
homepage:       https://github.com/xafizoff/n2o-hs#readme
bug-reports:    https://github.com/xafizoff/n2o-hs/issues
author:         Marat Khafizov
maintainer:     xafizoff@gmail.com
copyright:      2018 Marat Khafizov (c)
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:  README.md
synopsis:       N2O adapter for WebSockets
category:       Network, N2O, Web

source-repository head
  type: git
  location: https://github.com/xafizoff/n2o-hs

library
  exposed-modules: Network.N2O.Web
                 , Network.N2O.Web.Http
                 , Network.N2O.Web.WebSockets
  other-modules:
      Paths_n2o_web
  hs-source-dirs:
      src
  build-depends: base >= 4.7 && < 5
               , n2o == 0.11.*
               , n2o-protocols == 0.11.0
               , websockets >= 0.12.5
               , network >= 2.6
               , text >= 1.2
               , bytestring >= 0.10
               , binary >= 0.5
               , bert >= 1.2
               , attoparsec >= 0.13.2
               , case-insensitive >= 1.2
               , containers >= 0.5
               , base64-bytestring >= 1.0
  default-language: Haskell2010
