name:           n2o-web
version:        0.11.2
homepage:       https://github.com/xafizoff/n2o-hs#readme
bug-reports:    https://github.com/xafizoff/n2o-hs/issues
author:         Marat Khafizov
maintainer:     xafizoff@gmail.com
copyright:      2018 Marat Khafizov (c)
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:  README.md
synopsis:       N2O adapter for WebSockets
category:       Network, N2O, Web
description:    Poor man's WebSocket and HTTP static servers.

source-repository head
  type: git
  location: https://github.com/xafizoff/n2o-hs

library
  exposed-modules: Network.N2O.Web
                 , Network.N2O.Web.Http
                 , Network.N2O.Web.WebSockets
  other-modules:
      Paths_n2o_web
  hs-source-dirs:
      src
  build-depends: base >= 4.7 && < 5
               , n2o == 0.11.2
               , n2o-nitro == 0.11.2
               , websockets >= 0.12.5 && < 0.13
               , network >= 2.6 && < 2.7
               , text >= 1.2 && < 1.3
               , bytestring >= 0.10 && < 0.11
               , binary >= 0.8 && < 0.9
               , attoparsec >= 0.13.2 && < 0.14
               , case-insensitive >= 1.2 && < 1.3
               , containers >= 0.5 && < 0.6
               , base64-bytestring >= 1.0 && < 1.1
               , async >= 2.2 && < 2.3
               , vault >= 0.3 && < 0.4
  default-language: Haskell2010
